# kryptoflow

./: .coveragerc  .gitignore  .travis.yml  CNAME  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  _docker-compose.yml  architecture.html  authors.html  config.html  couscous.yml  docker-compose.yml  index.html  installation.html  keras_training.ipynb  license.html  quickstart.html  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  travis.yml
css/: ovac-couscous.css
docs/: Makefile  architecture.md  authors.html  conf.py  config.html  config.md  index.html  index.md  index.rst  installation.html  installation.md  license.html  license.md  quickstart.md
js/: bigSlide.js  hide-on-scroll.js
kryptoflow/: definitions.py  main.py  run_all.sh  skeleton.py
kryptoflow/analysis/: dataset.py  export.py  model.py  transforms.py
kryptoflow/api/: __init__.py  test.py
kryptoflow/api/endpoints/: historic.py  live.py  predict.py  ws.py
kryptoflow/api/helpers/: tf_serving_client.py
kryptoflow/api/tensorflow_serving/apis/: classification_pb2.py  get_model_metadata_pb2.py  inference_pb2.py  predict_pb2.py  prediction_service_pb2.py  regression_pb2.py
kryptoflow/cli/: __init__.py  dashboard.py  init.py  scrape.py  serve.py  train.py  version.py
kryptoflow/common/: data_interface.py  observers.py  stream.py  streamer_base.py  supervisor_client.py  utils.py  validation.py
kryptoflow/managers/: app_config.py  base.py  constants.py  dashboard.py  data.py  project.py  resource.py  secrets.py
kryptoflow/ml/: dataset.py  labeling.py  model.py  transforms.py
kryptoflow/ml/__deprecated__/: transforms.py
kryptoflow/models/: __init__.py  conf.py  model.py  streamer_base.py
kryptoflow/scrapers/: gdax_ws.py  reddit.py  twitter.py
kryptoflow/scrapers/__deprecated__/: btcusd.py
kryptoflow/scrapers/transforms/: sent_analysis.py
kryptoflow/scripts/: __init__.py  start.py  train.py  utils.py
kryptoflow/services/: btcusd.py  btcusd_validator.py  gdax_ws.py  reddit.py  twitter.py
kryptoflow/services/transforms/: dataset.py  sent_analysis.py
kryptoflow/services/utilities/: utils.py
kryptoflow/serving/: Dockerfile  README.md  app.py  export.py  index.html  serve.sh  settings.py  test_server.py
kryptoflow/serving/api/: restplus.py
kryptoflow/serving/backend/: app.py  requirements.txt  settings.py
kryptoflow/serving/backend/api/: restplus.py  test.py
kryptoflow/serving/backend/api/gan/endpoints/: client.py
kryptoflow/serving/backend/api/gan/logic/: tf_serving_client.py
kryptoflow/serving/backend/api/historical/endpoints/: client.py
kryptoflow/serving/backend/api/historical/logic/: historic_client.py
kryptoflow/serving/backend/api/predict/endpoints/: client.py
kryptoflow/serving/backend/api/predict/logic/: tf_serving_client.py
kryptoflow/serving/backend/ws/: handler.py
kryptoflow/serving/frontend/: .travis.yml  README.md  bower.json  ember-cli-build.js  index.html  package-lock.json  package.json
kryptoflow/serving/frontend/app/: index.html  router.js
kryptoflow/serving/frontend/app/components/: chart-highstock-interactive.js  websocket-client.js
kryptoflow/serving/frontend/app/routes/: charts.js
kryptoflow/serving/frontend/app/services/: dynamic-chart.js
kryptoflow/serving/frontend/app/templates/: about.hbs  application.hbs  charts.hbs  contact.hbs  index.hbs
kryptoflow/serving/frontend/app/templates/components/: chart-highstock-interactive.hbs
kryptoflow/serving/frontend/config/: environment.js
kryptoflow/serving/frontend/src/components/: About.vue  NotFound.vue  Prediction.vue  StockChart.vue
kryptoflow/serving/frontend/src/router/: index.js
kryptoflow/serving/frontend/tests/integration/components/: websocket-client-test.js
kryptoflow/serving/resources/: build_server.sh  serve.sh
kryptoflow/template/: .gitignore  kryptoflow.yaml  secrets.yaml
kryptoflow/template/kafka/schemas/: gdax.avsc  reddit.avsc  twitter.avsc
kryptoflow/template/kryptoflow/: twitter.py
kryptoflow/template/supervisor/: supervisord.conf
kryptoflow/trading/: agent.py
kryptoflow/ws/: client.py
requirements/: default.txt  test.txt
requirements/extras/: aws.txt  nlp.txt
resources/: gdax.avsc  kryptoflow_setup_script.sh  reddit.avsc  resources.json  secrets.json  supervisord.conf  twitter.avsc
resources/connector/: postgres-sink.properties  psql-sql.properties
resources/kafka-utils/: count_messages.sh  set_topics_config.sh
resources/schemas/: gdax.avsc  reddit.avsc  twitter.avsc
tests/: conftest.py  test_config_manager.py  test_init_project.py  test_keras_model_io.py  test_setup_streamer.py  test_skeleton.py  test_sklearn_base_model.py  test_sklearn_model_io.py
tests/make-money/: Dockerfile.tfserving  docker-compose.yaml  kryptoflow.yaml  model.py
tests/make-money/kafka/: server.properties  set_topics_config.sh
tests/make-money/supervisor/: supervisord.conf
tests/sample_proj/: secrets.yaml
tests/sample_schemas/: reddit.avsc
tests/test-project/: .gitignore  docker-compose.yaml  kryptoflow.yaml  model.py  secrets.yaml
tests/test-project/kryptoflow/: gdax.py  reddit.py
tests/test-project/supervisor/: supervisord.conf
tests/test_managers/: test_config_manager.py  test_data_manager.py  test_init_project.py  test_resource_manager.py  test_secrets_manager.py
(+8 files in other folders)
