# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[bumpversion]
current_version = '0.3.0'
commit = true
tag = true
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<releaselevel>[a-z]+)?
serialize =
    {major}.{minor}.{patch}{releaselevel}
    {major}.{minor}.{patch}

[bumpversion:file:setup.py]

[metadata]
name = kryptoflow
version = attr: kryptoflow.__version__
description = Add a short description here!
author = Carlo Mazzaferro
author-email = carlo.mazzaferro@gmail.com
license = mit
url = https://carlomazzaferro.github.io/kryptoflow/
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

;[options]
;zip_safe = False
;packages = find:
;include_package_data = True
;package_dir =
;    =kafka_tfrx
# Add here dependencies of your project (semicolon-separated), e.g.
# install_requires = numpy; scipy

[options.packages.find]
where = kryptoflow
exclude =
    tests


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov-config .coveragerc
    --cov kryptoflow --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox


[aliases]
release = sdist bdist_wheel upload
test=pytest


[bdist_wheel]
# Use this option if your package is pure-python
universal = 1


[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

