[bumpversion]
current_version = 0.4.0
commit = true
tag = true
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<releaselevel>[a-z]+)?
serialize = 
	{major}.{minor}.{patch}{releaselevel}
	{major}.{minor}.{patch}

[bumpversion:file:setup.py]

[metadata]
name = kryptoflow
version = attr: kryptoflow.__version__
description = Add a short description here!
author = Carlo Mazzaferro
author-email = carlo.mazzaferro@gmail.com
license = mit
url = https://carlomazzaferro.github.io/kryptoflow/
long-description = file: README.md
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options.packages.find]
where = kryptoflow
exclude = 
	tests

[tool:pytest]
addopts = 
	--cov-config .coveragerc
	--cov kryptoflow --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox

[aliases]
release = sdist bdist_wheel upload
test = pytest

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

